# mcp-server-vibes-coded

./: .gitignore  Dockerfile  GLAMA_RELEASE.md  LICENSE  README.md  _write_server_json.py  glama.json  mcp_server.py  pyproject.toml  server.json  smithery.yaml  tmpvis.json
.github/workflows/: docker-verify.yml  ghcr-public.yml  publish-mcp.yml
mcp_server_vibes_coded.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
