[project]
name = "mcp-server-vibes-coded"
version = "1.0.2"
description = "MCP server exposing Vibes-Coded pay-per-call x402 agent-tool endpoints as discoverable MCP tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "doteyeso-ops" }]
keywords = ["mcp", "x402", "agents", "solana", "vibes-coded"]
dependencies = [
  "mcp>=1.26.0",
  "httpx>=0.27.0",
  "uvicorn[standard]>=0.30.0",
  "starlette>=0.40.0,<0.48.0",
]

[project.urls]
Homepage = "https://vibes-coded.com"
Repository = "https://github.com/doteyeso-ops/mcp-server-vibes-coded"
Documentation = "https://vibes-coded.com/llms.txt"

[project.scripts]
mcp-server-vibes-coded = "mcp_server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mcp_server"]

[tool.mcp]
name = "vibes-coded-agent-tools"
